Corrected some details on mobile layout

--- a/styles/style.css
+++ b/styles/style.css
@@ -1760,6 +1760,12 @@ body {
 
 /*----------------450 PX-------------------------*/
 @media only screen and (max-width: 450px) {
+
+    .logomarca {
+        margin-left: 10px;
+        
+    }
+    
     .hamburger-menu  {
         margin-right: 20px; /*adjust the menu icon for mobile*/
         
@@ -2165,9 +2171,10 @@ body {
             grid-row: 1/3;
             margin-left: 0px;
             margin-bottom: 50px;
+            margin-top: 35px;
             color: #fff;
             font-size: 18px;
-            text-align: center;
+            text-align: justify;
         }
     
         .container-contato a:hover{
@@ -2219,10 +2226,10 @@ body {
         .container-contato .contact-man {
             grid-column: 1/12;
             grid-row: 6;
-            margin-bottom: 50px;
+            margin-bottom: 30px;
             width: 320px;
             height: auto;
-            margin-left: 5px;
+            margin-left: 30px;
             
         }
     
@@ -2293,8 +2300,9 @@ body {
         .nossos-parceiros p {
             grid-row: 2;
             grid-column: 3/11;
-            margin-bottom: 50px;
-            text-align: center;
+            margin-bottom: 10px;
+            text-align: justify;
+            te
         }
         
         .parceiro-1 {
